--- a/test11.html
+++ b/test11.html
@@ -15,9 +15,7 @@
             float:left;
         }
         #table{
-            position:fixed;
-            bottom:10;
-            left:10;
+            float:left;
         }
     </style>
     <script type="text/javascript">
@@ -43,7 +41,7 @@
     </script>
 </head>
 <body>
-    <div id="Clock">
+    <h1 align="center">
     <p id="date" style="font-size:50px;">
         <script>
             var d = new Date();
@@ -51,7 +49,7 @@
         </script>
     <br>
     <span id="display"> </span></p>
-        </div>
+    </h1>
     <div id="weather">
     <table cellpadding=0 cellspacing=0 width=206 style="border:solid 1px #222ad3;font-family:Arial;font-size:12px;background-color:#000000">
         <tr>
@@ -79,8 +77,11 @@
     </table>
     </div>
     <div id="table">
-        <table border="1">
-
+        <table border="1" width="300" height="500">
+            <tr>
+                <td><img src="pic2.png"></img></td>
+                <td colspan="3">value</td>
+            </tr>
             <tr>
                 <td><img src="pic2.png"></img></td>
                 <td colspan="3">value</td>
