--- a/test11.html
+++ b/test11.html
@@ -4,7 +4,7 @@
     <style>
         body {
             background-color: black;
-            color: white
+            color: white;
         }
 
         div {
@@ -67,12 +67,12 @@
     </script>
 <script>
     $(document).ready(function () {
-        $('#auto').load('test3.txt');
+        $('#auto').load('test13.txt');
         refresh();
     });
     function refresh() {
         setTimeout(function () {
-            $('#auto').load('test3.txt');
+            $('#auto').load('test13.txt');
             refresh();
         }, 2000);
     }
@@ -121,7 +121,7 @@
             <tr>
                 <td><img src="file:///C:/Users/asch0/Documents/GitHub/project/pic2.png"></td>
                 <td colspan="3">
-                    <script>readTextFile('test3.txt');
+                    <script>readTextFile('test13.txt');
                     </script>
                 </td>
             </tr>
